@@ -2,10 +2,8 @@ package de.exlll.configlib;
 
 import de.exlll.configlib.ConfigurationElements.FieldElement;
 
-import java.lang.reflect.Field;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 final class ConfigurationSerializer<T> extends TypeSerializer<T, FieldElement> {
     ConfigurationSerializer(Class<T> configurationType, ConfigurationProperties properties) {
@@ -14,27 +12,14 @@ final class ConfigurationSerializer<T> extends TypeSerializer<T, FieldElement> {
 
     @Override
     public T deserialize(Map<?, ?> serializedConfiguration) {
-        final T result = Reflect.callNoParamConstructor(type);
-
-        for (final FieldElement element : elements()) {
-            final String formattedName = formatter.format(element.name());
-
-            if (!serializedConfiguration.containsKey(formattedName))
-                continue;
-
-            final Object serializedValue = serializedConfiguration.get(formattedName);
-            final Field field = element.element();
-
-            if ((serializedValue == null) && properties.inputNulls()) {
-                requireNonPrimitiveFieldType(field);
-                Reflect.setValue(field, result, null);
-            } else if (serializedValue != null) {
-                Object deserializeValue = deserialize(element, serializedValue);
-                Reflect.setValue(field, result, deserializeValue);
-            }
+        final var deserializedElements = deserializeConfigurationElements(serializedConfiguration);
+        final var elements = elements();
+        final T result = newDefaultInstance();
+        for (int i = 0; i < deserializedElements.length; i++) {
+            final FieldElement fieldElement = elements.get(i);
+            Reflect.setValue(fieldElement.element(), result, deserializedElements[i]);
         }
-
-        return result;
+        return postProcessor.apply(result);
     }
 
     @Override
@@ -48,8 +33,8 @@ final class ConfigurationSerializer<T> extends TypeSerializer<T, FieldElement> {
 
     @Override
     protected String baseDeserializeExceptionMessage(FieldElement element, Object value) {
-        return String.format("Deserialization of value '%s' with type '%s' for field '%s' failed.",
-                        value, value.getClass(), element.element());
+        return "Deserialization of value '%s' with type '%s' for field '%s' failed."
+                .formatted(value, value.getClass(), element.element());
     }
 
     @Override
@@ -57,7 +42,7 @@ final class ConfigurationSerializer<T> extends TypeSerializer<T, FieldElement> {
         return FieldExtractors.CONFIGURATION.extract(type)
                 .filter(properties.getFieldFilter())
                 .map(FieldElement::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -65,15 +50,15 @@ final class ConfigurationSerializer<T> extends TypeSerializer<T, FieldElement> {
         return Reflect.callNoParamConstructor(type);
     }
 
-    private static void requireNonPrimitiveFieldType(Field field) {
-        if (field.getType().isPrimitive()) {
-            String msg = String.format("Cannot set field '%s' to null value. Primitive types cannot be assigned null.",
-                    field);
-            throw new ConfigurationException(msg);
-        }
-    }
-
     Class<T> getConfigurationType() {
         return type;
+    }
+
+    // This object must only be used for the `getDefaultValueOf` method below.
+    private final T defaultInstance = newDefaultInstance();
+
+    @Override
+    protected Object getDefaultValueOf(FieldElement element) {
+        return Reflect.getValue(element.element(), defaultInstance);
     }
 }
